<resources>
    <string name="app_name">Patitas</string>

    <!-- Pet Description Default -->
    <string name="numberDefaul">0</string>
    <string name="namePet">Sushi</string>
    <string name="typePet">Perro</string>
    <string name="agePet">20 Meses</string>
    <string name="statePet">En Adopcion</string>
    <string name="genderPet">Macho</string>
    <string name="descDefault">Lorem ipsum dolor sit amet consectetur adipiscing elit aenean senectus purus, class vehicula viverra feugiat facilisis litora cum auctor nullam facilisi, varius dignissim eu mollis tellus risus egestas blandit donec. Accumsan curabitur facilisis eros himenaeos dictum quisque cubilia urna feugiat, nisl imperdiet cursus rutrum neque sagittis ligula fusce. Euismod platea congue sagittis id volutpat tellus curabitur vitae interdum viverra ligula sociosqu, netus magnis pharetra quam lectus nisi nullam integer purus risus dapibus justo, malesuada donec non laoreet duis per arcu felis nascetur sapien pulvinar. </string>
    <string name="team">ColoColo</string>
    <string name="region">Maule</string>
    <string name="commune">Molina</string>

    <string name="datos">Datos</string>
    <string name="link">Visitar Página</string>
    <string name="search">¿Qué Estás Buscando?</string>
    <string name="adopme"> Adoptame!!!  </string>
    <string name="titulo">PATITAS</string>
    <string name="adopta">ADOPTA</string>
    <string name="agradecimientos">AGRADECIMIENTOS A HUACHITOS.CL</string>
    <string name="creadopor">"CREADO POR DANIEL ARIAS Y ALVARO MONSALVE"</string>
    <string name="nameandlastname">Tu Nombre y Apellido</string>
    <string name="correo">Tu correo</string>
    <string name="telefono">Tu telefono de contacto</string>
    <string name="nacimiento">Tu fecha de nacimiento</string>
    <string name="rut">Tu Rut</string>
    <string name="actividad">Tu actividad economica, oficio o profesion</string>
    <string name="nameandlastnameIn">Ingresa tu Nombre y Apellido</string>
    <string name="correoIn">Ingresa tu correo</string>
    <string name="telefonoIn">Ingresa tu numero de telefono</string>
    <string name="nacimientoIn"> dd/mm/aaaa</string>
    <string name="rutIn">Ingresa tu Rut</string>
    <string name="actividadIn">Dinos tu actividad economica, oficio o profesion</string>

    <string name="formularioIn">Tus datos fueron enviados nos comunicaremos contigo en breve</string>
    <string name="aceptIn">Aceptar</string>
    <string name="noIn">Ingresa los datos correctamente</string>


</resources>