<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PetDetailActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@mipmap/placeholder_image_foreground" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/link" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="@string/datos" />

        <!--Nombre-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/name_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Nombre:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/namePet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <!--Tipo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tipo:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/type_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/typePet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Edad-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/age_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Edad:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/age_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/agePet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <!--Estado-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/state_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Estado:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/state_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/statePet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Genero-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Genero:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/gender_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/genderPet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Esterilizado-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ster_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Esterilizado:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/ster_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/numberDefaul"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Vacunas-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vac_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Vacunado:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/vac_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/numberDefaul"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"  />

        </LinearLayout>

        <!--Equipo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Equipo:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/team_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/team"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Region-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/region_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Región:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/region_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/region"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Comuna-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/commune_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Comuna:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/commune_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/commune"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"  />

        </LinearLayout>

        <!--Fisico-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Fisico:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/desf_detail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/descDefault"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

        <!--Perso-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Personalidad:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/desp_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descDefault"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>


        <!--Adicionales-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ad_tittle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Adicionales:  "
                android:textAlignment="textEnd"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/desa_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descDefault"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>